--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,64 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.596
+head: 1.607
 branch:
 locks: strict
-	gilles: 1.596
+	gilles: 1.607
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 596;	selected revisions: 596
+total revisions: 607;	selected revisions: 607
 description:
 ----------------------------
-revision 1.596	locked by: gilles;
+revision 1.607	locked by: gilles;
+date: 2014/11/14 16:25:06;  author: gilles;  state: Exp;  lines: +46 -40
+Added several checks if IsUnconnected. Goal avoid imap commands while disconnected.
+----------------------------
+revision 1.606
+date: 2014/11/14 14:49:13;  author: gilles;  state: Exp;  lines: +16 -13
+Added total size transferred after each message copied.
+Added number of total to be synced as a denominator dddd after each message copied, nnn/dddd, where nnn is the number of messages copied.
+----------------------------
+revision 1.605
+date: 2014/11/11 00:00:37;  author: gilles;  state: Exp;  lines: +40 -10
+Bugfix. On Windows file path with brackets [] are special. [a] must be written [[]a[]]
+----------------------------
+revision 1.604
+date: 2014/11/08 00:29:26;  author: gilles;  state: Exp;  lines: +36 -9
+Added --skipemptyfolders to skip empty host1 folders. They are not created on host2.
+----------------------------
+revision 1.603
+date: 2014/11/07 22:06:33;  author: gilles;  state: Exp;  lines: +26 -26
+Typo from previous save with gedit and ¤
+----------------------------
+revision 1.602
+date: 2014/11/07 21:57:57;  author: gilles;  state: Exp;  lines: +82 -19
+Added utf8 output for folder names that use special characters in utf7imap
+----------------------------
+revision 1.601
+date: 2014/10/28 10:48:07;  author: gilles;  state: Exp;  lines: +22 -22
+Moved foldersizes call after folders lists print.
+----------------------------
+revision 1.600
+date: 2014/10/27 10:41:52;  author: gilles;  state: Exp;  lines: +8 -8
+Remove /x from regex applied with --include and --exclude. Blanks no longer have to be explicit with \ or [ ].
+----------------------------
+revision 1.599
+date: 2014/10/26 23:42:12;  author: gilles;  state: Exp;  lines: +14 -10
+Added help usage for --nomixfolders
+----------------------------
+revision 1.598
+date: 2014/10/21 00:27:07;  author: gilles;  state: Exp;  lines: +20 -7
+Added tests to check --regextrans2 's,(.*),\L$1,'
+Exchange issue with folders with same name and --delete2.
+----------------------------
+revision 1.597
+date: 2014/10/06 10:48:26;  author: gilles;  state: Exp;  lines: +12 -11
+Changed --nomixdiffcasefolders to --nomixfolders.
+Bugfix. --nomixdiffcasefolders was not parsed in command line so it did not work.
+----------------------------
+revision 1.596
 date: 2014/09/04 17:17:36;  author: gilles;  state: Exp;  lines: +11 -6
 Added --logfile in help output.
 Added --nolog   in help output.
