--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.39 2014/09/19 19:37:08 gilles Exp gilles $
+# $Id: INSTALL,v 1.40 2014/11/14 17:07:21 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync and migrate tool.
@@ -80,7 +80,8 @@ Test all Perl modules dependency in one command:
 
   perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL \
        -mDigest::HMAC_MD5 -mAuthen::NTLM -e -mTime::HiRes \
-       -mData::Uniqid -mURI::Escape -mFile::Copy::Recursive -mIO::Tee ""
+       -mData::Uniqid -mURI::Escape -mFile::Copy::Recursive -mIO::Tee \
+       -mUnicode::String ""
 
 You can install easily those Perl modules in latest release via the
 following commands (with root permissions)
@@ -92,6 +93,7 @@ following commands (with root permissions)
   perl -MCPAN -e "install URI::Escape"
   perl -MCPAN -e "install File::Copy::Recursive"
   perl -MCPAN -e "install IO::Tee"
+  perl -MCPAN -e "install Unicode::String"
 
   perl -MCPAN -e "install Data::Uniqid"
   perl -MCPAN -e "install Authen::NTLM"
@@ -117,11 +119,14 @@ On Debian/Ubuntu:
   aptitude install liburi-perl                 # URI::Escape
   aptitude install libfile-copy-recursive-perl # File::Copy::Recursive
   aptitude install libio-tee-perl              # IO::Tee
+  aptitude install libunicode-string-perl      # Unicode::String
 
 On Ubuntu 14 (thanks to http://www.jverdeyen.be/ubuntu/imapsync-on-ubuntu/):
 
   sudo apt-get install makepasswd rcs perl-doc libio-tee-perl git
-  sudo apt-get install libmail-imapclient-perl libdigest-md5-file-perl libterm-readkey-perl libfile-copy-recursive-perl 
+  sudo apt-get install libmail-imapclient-perl libdigest-md5-file-perl 
+  sudo apt-get install libterm-readkey-perl libfile-copy-recursive-perl 
+  sudo apt-get install libunicode-string-perl
 
 On Mandriva:
 
@@ -132,7 +137,7 @@ On Mandriva:
   urpmi perl-URI                 # URI::Escape
   urpmi perl-File-Copy-Recursive # File::Copy::Recursive
   urpmi perl-IO-Tee              # IO::Tee
-  
+  urpmi perl-Unicode-String      # Unicode::String
 
 On  CentOS (thanks to Ralf Hauber)
 
@@ -148,6 +153,7 @@ On  CentOS (thanks to Ralf Hauber)
   yum install perl-Data-Uniqid           # Data::Uniqid
   yum install perl-File-Copy-Recursive   # File::Copy::Recursive
   yum install perl-IO-Tee                # IO::Tee
+  yum install perl-Unicode-String        # Unicode::String
 
 
 INSTALLING on Unix
