--- a/README
+++ b/README
@@ -4,7 +4,7 @@ NAME
     More than 52 different IMAP server softwares supported with success, few
     failures.
 
-    $Revision: 1.596 $
+    $Revision: 1.607 $
 
 SYNOPSIS
     To synchronize imap account "foo" on "imap.truc.org" to imap account
@@ -374,6 +374,7 @@ IMAP SERVERS
      - MailEnable 4.23 [host1] [host2], 4.26 [host1][host2], 5 [host1]
      - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 
        9.6.5 [host1], 12 [host2], 12.0.3 [host1], 12.5.5 [host1],
+       13.5 [host2], 14.5 [host2]
      - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
        6.5.7638.1 [host2], 6.5 [host1], Exchange 2007 SP1 (with Update Rollup 2), 
@@ -486,5 +487,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.596 2014/09/04 17:17:36 gilles Exp gilles $
+    $Id: imapsync,v 1.607 2014/11/14 16:25:06 gilles Exp gilles $
 
