--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.126 2014/05/21 01:15:47 gilles Exp gilles $
+# $Id: TODO,v 1.127 2014/11/14 17:06:17 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -17,7 +17,11 @@ http://www.yippiemove.com/
 http://www.migrationwiz.com/
 http://www.microsoft.com/download/en/details.aspx?id=1329 "Microsoft Transporter Suite"
 
+Separate the online site in a subfolder site/ or www/  and make the upper directory simple.
+
 Add an option to remove empty folders on host1, except INBOX.
+Is it possible to run imapsync in a way that empty folders on host1
+aren't created at all on host2? 
 
 Apply --disarmreadreceipts only to UNSEEN messages.
 
@@ -72,11 +76,6 @@ Does \lalala can be forbidden (courier does a
 "16 NO Error in IMAP command received by server"
 with 
 * OK [PERMANENTFLAGS (\* \Draft \Answered \Flagged \Deleted \Seen)] Limited
-
-Suggestion: it's very difficult to track down messages which are behaving
-funny during the sync. It would be great - and presumably easy to code -
-to have an option to have imapsync display e.g. the subject of an
-e-mail when it gets synced, rather than just the message ID and the date/time.
 
 Add a well described problem for each problem detected
 and counted in error counter statistics.
@@ -155,6 +154,16 @@ Add cyrus link about INBOX. namespace
 http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
 
 ===========================================================================
+
+DONE. Subject is output when APPEND fails. Done since a long time.
+Suggestion: it's very difficult to track down messages which are behaving
+funny during the sync. It would be great - and presumably easy to code -
+to have an option to have imapsync display e.g. the subject of an
+e-mail when it gets synced, rather than just the message ID and the date/time.
+
+
+DONE. Add W/learn/imap_utf7  in imapsync, the folders lists output looks a good place,
+if transcription is needed.
 
 DONE. Add options --log and --logfile to log both on screen and to a file.
 DONE. Document the tee command solution (Unix and Windows) in the FAQ.
