--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,48 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.637
+head: 1.644
 branch:
 locks: strict
-	gilles: 1.637
+	gilles: 1.644
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 637;	selected revisions: 637
+total revisions: 644;	selected revisions: 644
 description:
 ----------------------------
-revision 1.637	locked by: gilles;
+revision 1.644	locked by: gilles;
+date: 2015/07/17 01:22:52;  author: gilles;  state: Exp;  lines: +9 -7
+Added NOOP in --dry mode during fake APPEND.
+----------------------------
+revision 1.643
+date: 2015/06/24 01:01:00;  author: gilles;  state: Exp;  lines: +17 -10
+Added --fetch_hash_set "1:*" to permit Mail2World success.
+Need a patched Mail::IMAPClient 3.35 in sub fetch_hash()
+See https://rt.cpan.org/Public/Bug/Display.html?id=105456
+----------------------------
+revision 1.642
+date: 2015/05/11 01:07:37;  author: gilles;  state: Exp;  lines: +9 -6
+Added JSON::WebToken in modules list.
+----------------------------
+revision 1.641
+date: 2015/05/09 17:52:27;  author: gilles;  state: Exp;  lines: +27 -128
+Replaced imap servers software list by a link to the web list.
+Added option --subfolder2 SUB Move whole host1 folders hierarchy under folder SUB.
+----------------------------
+revision 1.640
+date: 2015/05/05 01:03:34;  author: gilles;  state: Exp;  lines: +18 -12
+No folders sizes if --justfolders, unless really wanted.
+----------------------------
+revision 1.639
+date: 2015/04/16 19:33:59;  author: gilles;  state: Exp;  lines: +7 -7
+*** empty log message ***
+----------------------------
+revision 1.638
+date: 2015/04/09 22:47:24;  author: gilles;  state: Exp;  lines: +19 -11
+No warning about messages when --dry --justfolders together.
+----------------------------
+revision 1.637
 date: 2015/04/01 01:36:37;  author: gilles;  state: Exp;  lines: +9 -9
 Bugfix. Win32 regression with long_path_2_prefix test. Was too long.
 ----------------------------
