--- a/W/imapsync.1
+++ b/W/imapsync.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "IMAPSYNC 1"
-.TH IMAPSYNC 1 "2015-04-01" "perl v5.14.2" "User Contributed Perl Documentation"
+.TH IMAPSYNC 1 "2015-07-17" "perl v5.14.2" "User Contributed Perl Documentation"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -135,7 +135,7 @@ Synchronises mailboxes between two imap servers.
 Good at IMAP migration. More than 52 different IMAP server softwares
 supported with success, few failures.
 .PP
-$Revision: 1.637 $
+$Revision: 1.644 $
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
 To synchronize imap account \*(L"foo\*(R" on \*(L"imap.truc.org\*(R"
@@ -489,130 +489,7 @@ http://www.catb.org/~esr/faqs/smart\-questions.html
 and then forget it.
 .SH "IMAP SERVERS"
 .IX Header "IMAP SERVERS"
-Failure stories reported in the past with the following 6 imap servers.
-Maybe last imapsync release can run successfully with them.
-Don't hesitate to have a try, It's been a long time since last failure occured,
-I will help you and make efforts to switch them to the success list, 
-that's my job.
-.PP
-.Vb 9
-\& \- MailEnable 1.54 (Proprietary) but MailEnable 4.23 is supported. 
-\& \- DBMail 0.9, 2.0.7 (GPL). But DBMail 1.2.1 is supported.
-\&   Patient and confident testers are welcome.
-\& \- Imail 7.04 (maybe).
-\& \- (2011) MDaemon 12.0.3 as host2 but MDaemon is supported as host1.
-\&   MDaemon is simply buggy with the APPEND IMAP command with 
-\&   any IMAP email client.
-\& \- Hotmail since hotmail.com does not provide IMAP access
-\& \- Outlook.com since outlook.com does not provide IMAP access
-.Ve
-.PP
-Success stories reported with the following 62 imap servers 
-(software names are in alphabetic order):
-.PP
-.Vb 10
-\& \- 1und1 H mimap1 84498 [host1] H mibap4 95231 [host1]
-\& \- a1.net imap.a1.net IMAP4 Ready [host1]
-\& \- Apple Server 10.6 Snow Leopard [host1]
-\& \- Archiveopteryx 2.03, 2.04, 2.09, 2.10 [host2], 3.0.0 [host2]
-\&   (OSL 3.0) http://www.archiveopteryx.org/
-\& \- Atmail 6.x [host1]
-\& \- Axigen Mail Server Version 8.0.0
-\& \- BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
-\& \- CommuniGatePro server (Redhat 8.0) (Solaris), CommuniGate Pro 5.2.17[host2] (CentOS 5.4)
-\& \- Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1, 3.0.8, 3.0.3, 4.1.1 (GPL) 
-\&   (http://www.courier\-mta.org/)
-\& \- Critical Path (7.0.020)
-\& \- Cyrus IMAP 1.5, 1.6, 
-\&   2.1, 2.1.15, 2.1.16, 2.1.18 
-\&   2.2.1, 2.2.2\-BETA, 2.2.3, 2.2.6, 2.2.10, 2.2.12, 2.2.13,
-\&   2.3\-alpha (OSI Approved), 2.3.1, 2.3.7, 2.3.16
-\&   (http://asg.web.cmu.edu/cyrus/)
-\& \- David Tobit V8 (proprietary Message system).
-\& \- Deerfield VisNetic MailServer 5.8.6 [host1] (http://www.deerfield.net/products/visnetic\-mailserver/) 
-\& \- DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
-\&   2.0.7 seems buggy.
-\& \- DBOX 2.41 System [host1] (http://www.dbox.handshake.de/).
-\& \- Deerfield VisNetic MailServer 5.8.6 [host1]
-\& \- dkimap4 [host1]
-\& \- Domino (Notes) 4.61 [host1], 6.5 [host1], 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 
-\&   7.0.1 [host1], 8.0.1 [host1], 8.5.2 [host2], 8.5.3 [host1]
-\& \- Dovecot 0.99.10.4, 0.99.14, 0.99.14\-8.fc4, 1.0\-0.beta2.7, 
-\&   1.0.0 [dest/source] (LGPL) (http://www.dovecot.org/)
-\& \- Eudora WorldMail v2
-\& \- FirtClass 9 [host1] Read the FAQ! (http://www.firstclass.com/)
-\& \- FTGate (http://www.ftgate.com/)
-\& \- Fusemail imap.fusemail.net:143 (https://www.fusemail.com/).
-\& \- Gimap (Gmail imap)
-\& \- GMX IMAP4 StreamProxy.
-\& \- Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
-\& \- hMailServer 5.40\-B1950 [host12], 5.3.3 [host2], 4.4.1 [host1] (see FAQ)
-\& \- IceWarp Server 10.4.5 [host1] (http://www.icewarp.com/)
-\& \- iPlanet Messaging server 4.15, 5.1, 5.2
-\& \- IMail 7.15 (Ipswitch/Win2003), 8.12, 11.03 [host1]
-\& \- Kerio 7.2.0 Patch 1 [host12], Kerio 8 [host1]
-\& \- Mail2World IMAP4 Server 2.5 [host1] (http://www.mail2world.com/)
-\& \- MailEnable 4.23 [host1] [host2], 4.26 [host1][host2], 5 [host1]
-\& \- MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform), 
-\&   9.6.5 [host1], 12 [host2], 12.0.3 [host1], 12.5.5 [host1],
-\&   13.5 [host2], 14.5 [host2]
-\& \- Mercury 4.1 (Windows server 2000 platform)
-\& \- Microsoft Exchange Server 5.5, 6.0.6249.0[host1], 6.0.6487.0[host1], 
-\&   6.5.7638.1 [host2], 6.5 [host1], Exchange 2007 SP1 (with Update Rollup 2), 
-\&   Exchange2007\-EP\-SP2,
-\&   Exchange 2010 RTM (Release to Manufacturing) [host2],
-\&   Exchange 2010 SP1 RU2[host2],
-\& \- Mirapoint, 4.1.9\-GA [host1]
-\& \- Netscape Mail Server 3.6 (Wintel !)
-\& \- Netscape Messaging Server 4.15 Patch 7
-\& \- Office 365 [host1] [host2]
-\& \- OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
-\& \- OpenWave
-\& \- Oracle Beehive [host1]
-\& \- Parallels Plesk Panel 9.x [host2] 11.x [host2] (http://www.parallels.com/)
-\& \- Qualcomm Worldmail (NT)
-\& \- QQMail IMAP4Server [host1] [host2] https://en.mail.qq.com/
-\& \- RackSpace hoster secure.emailsrvr.com:993 http://www.rackspace.com/
-\& \- Rockliffe Mailsite 5.3.11, 4.5.6
-\& \- Samsung Contact IMAP server 8.5.0
-\& \- Scalix v10.1, 10.0.1.3, 11.0.0.431, 11.4.6
-\& \- Sendmail Mail Store IMAP4rev1 (5.5.6/mstore\-5\-5\-build\-1874 [host1].
-\& \- SmarterMail, Smarter Mail 5.0 Enterprise, Smarter Mail 5.5 [host1], 
-\&   SmarterMail Professional 10.2 [host1], Smarter Mail 11.7 [host1][host2].
-\& \- Softalk Workgroup Mail 7.6.4 [host1].
-\& \- SunONE Messaging server 5.2, 6.0 (SUN JES \- Java Enterprise System)
-\& \- Sun Java(tm) System Messaging Server 6.2\-2.05,  6.2\-7.05, 6.3
-\& \- Surgemail 3.6f5\-5, 6.3d\-72 [host2]
-\& \- UW\-imap servers (imap\-2000b) rijkkramer IMAP4rev1 2000.287
-\&   (RedHat uses UW like 2003.338rh), v12.264 Solaris 5.7 (OSI Approved) 
-\&   (http://www.washington.edu/imap/)
-\& \- UW \- QMail v2.1
-\& \- VMS, Imap part of TCP/IP suite of VMS 7.3.2
-\& \- Yahoo [host1]
-\& \- Zarafa 6,40,0,20653 [host1] (http://www.zarafa.com/)
-\& \- Zarafa ZCP 7.1.4 IMAP Gateway [host2]
-\& \- Zimbra\-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 
-\&   Zimbra 5.0.24_GA_3356.RHEL4 [host1], 5.5, 6.x
-.Ve
-.PP
-Please report to the author any success or bad story with
-imapsync and do not forget to mention the \s-1IMAP\s0 server
-software names and version on both sides. This will help
-future users. To help the author maintaining this section
-report the two lines at the begining of the output if they
-are useful to know the softwares. Example:
-.PP
-.Vb 2
-\& Host1 software:* OK louloutte Cyrus IMAP4 v1.5.19 server ready
-\& Host2 software:* OK Courier\-IMAP ready
-.Ve
-.PP
-You can use option \-\-justconnect to get those lines.
-Example:
-.PP
-.Vb 1
-\&  imapsync \-\-host1 imap.troc.org \-\-host2 imap.trac.org \-\-justconnect
-.Ve
+See http://imapsync.lamiral.info/S/imapservers.shtml
 .SH "HUGE MIGRATION"
 .IX Header "HUGE MIGRATION"
 Pay special attention to options 
@@ -692,4 +569,4 @@ https://web.archive.org/web/20070202005121/http://www.imap.org/products/showall.
 .PP
 Feedback (good or bad) will often be welcome.
 .PP
-\&\f(CW$Id:\fR imapsync,v 1.637 2015/04/01 01:36:37 gilles Exp gilles $
+\&\f(CW$Id:\fR imapsync,v 1.644 2015/07/17 01:22:52 gilles Exp gilles $
