--- a/TODO
+++ b/TODO
@@ -1,11 +1,24 @@
 #!/bin/cat
-# $Id: TODO,v 1.195 2017/12/19 14:54:34 gilles Exp gilles $
+# $Id: TODO,v 1.199 2018/07/02 09:03:20 gilles Exp gilles $
 
 This documentation is also at http://imapsync.lamiral.info/#doc
 
 ===========================================================================
 TODO file for imapsync
 ----------------------
+
+SUGGESTED 2018_06_29 by Michael Hesse
+Remove the warning on Windows
+“No such signal: SIGUSR1 at script/imapsync line 11744.”
+
+SUGGESTED 2018_05_15 by Massimo Maggi
+https://github.com/imapsync/imapsync/issues/141
+Document --skipcrossduplicates and --debugcrossduplicates in imapsync --help
+Document all other useful missing options.
+
+SUGGESTED 2018_05_08 by James B. Byrne
+Sync also the quota with SETQUOTA
+https://tools.ietf.org/html/rfc2087
 
 SUGGESTED 2017_12_19 by Gilles
 In foldersizes, add info about the oldest message found: INTERNALDATE EPOCH DAYS_FROM_NOW 
