Fix typos "uft" -> "utf"

--- a/TODO
+++ b/TODO
@@ -551,7 +551,7 @@ Usage: --maxlinelength 9900 maxlinelengthcmd 'reformime -r7'
 
 DONE. Add DavMail in Similar Softwares section. http://davmail.sourceforge.net/
 
-DONE. Convert folder names to utf-8 and print them next to the uft-7 ones.
+DONE. Convert folder names to utf-8 and print them next to the utf-7 ones.
 Look at imapsync/W/learn/
 ./imap_utf7 data_utf7
 
